[package]
name = "callsm"
version = "0.1.0"
authors = ["yubo <yubo@rivtower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsm = { git = "https://github.com/citahub/libsm", branch = "perform" }
secp256k1 = {version = "0.15", features = ["rand", "recovery"]}
rand = "0.6"